fixs z-index navigation

--- a/src/stylus/blocks/_navigation.styl
+++ b/src/stylus/blocks/_navigation.styl
@@ -3,7 +3,7 @@
   top 0
   left 0
   width 100%
-  z-index: 10000
+  z-index: 3000
   // background-color: black // DELETE
   padding-top 2.2rem
   padding-bottom: 2px
